[package]
name = "rquickjs-module-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rquickjs = { version = "0.6.2", features = [
  "futures",
  "loader",
  "indexmap",
  "parallel",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = "2"
tokio = { version = "1", features = ["full"] }